* Update locales * Add new logo

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (2.0.14) stable; urgency=low
 
+  * Update locales.
   * Various improvements.
   * Add temporary workaround to fix rendering bug in Chrome 43.
     See https://code.google.com/p/chromium/issues/detail?id=489875.
