--- a/deb/openmediavault/usr/share/openmediavault/locale/no_NO/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/no_NO/openmediavault.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-06-01 21:40+0200\n"
-"PO-Revision-Date: 2015-05-24 08:02+0000\n"
+"POT-Creation-Date: 2015-06-11 22:38+0200\n"
+"PO-Revision-Date: 2015-06-11 20:38+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
@@ -224,6 +224,9 @@ msgstr "Legg til hot spares / gjenoppbygg RAID enheten"
 
 msgid "Add module"
 msgstr "Ny modul"
+
+msgid "Add public key"
+msgstr ""
 
 msgid "Add rsync job"
 msgstr "Ny rsync jobb"
@@ -1022,6 +1025,9 @@ msgstr "Ecuador"
 msgid "Edit"
 msgstr "Endre"
 
+msgid "Edit SSH certificate"
+msgstr ""
+
 msgid "Edit SSL certificate"
 msgstr "Endre SSL-sertifikat"
 
@@ -1596,6 +1602,9 @@ msgstr "Implisitt SSL"
 msgid "Import"
 msgstr "Importer"
 
+msgid "Import SSH certificate"
+msgstr ""
+
 msgid "Import SSL certificate"
 msgstr "Importer SSL sertifikat"
 
@@ -1672,6 +1681,9 @@ msgstr ""
 
 msgid "Interfaces"
 msgstr "Nettverk"
+
+msgid "Invalid SSH public key (RFC 4716)"
+msgstr ""
 
 msgid "Invalid domain name"
 msgstr "Ugyldig domenenavn"
@@ -2530,7 +2542,13 @@ msgstr "Protokoll"
 msgid "Public"
 msgstr "Offentlig"
 
+msgid "Public key"
+msgstr ""
+
 msgid "Public key authentication"
+msgstr ""
+
+msgid "Public keys"
 msgstr ""
 
 msgid "Puerto Rico"
@@ -2773,10 +2791,10 @@ msgstr "SNMP versjon 3"
 msgid "SSH"
 msgstr "SSH"
 
-msgid "SSH public key"
+msgid "SSID"
 msgstr ""
 
-msgid "SSID"
+msgid "SSL"
 msgstr ""
 
 msgid "SSL/TLS"
@@ -2853,6 +2871,9 @@ msgstr "Sikker tikobling"
 
 msgid "Security level"
 msgstr "Sikkerhetsnivå"
+
+msgid "Select a SSH certificate ..."
+msgstr ""
 
 msgid "Select a SSL certificate ..."
 msgstr "Velg ett SSL sertifikat"
@@ -3284,6 +3305,9 @@ msgstr "NT beskrivelsesfelt"
 msgid "The RSA key length."
 msgstr "RSA nøkkellengde"
 
+msgid "The RSA public key in OpenSSH format."
+msgstr ""
+
 msgid "The SSL certificate."
 msgstr "SSL Sertifikatet som skal benyttes"
 
@@ -3381,6 +3405,9 @@ msgid ""
 "this. This can be particularly useful on systems with many users to allow a "
 "single share to be used flexibly by each user."
 msgstr "Tillatelsene på nye filer og kataloger er normalt styrt av Opprett maske og Mappemaske men parameteren  Arv tillatelser overstyrer denne. Dette kan være spesielt nyttig på systemer med mange brukere for å tillate et enkelt område å bli brukt fleksibelt av alle brukere."
+
+msgid "The private RSA key in X.509 PEM format."
+msgstr ""
 
 msgid "The public key in RFC 4716 SSH public key file format."
 msgstr ""
